# Deep_Poo

./: .gitignore  404.html  COMMERCIAL_LICENSE.md  CONTROLS.html  CONTROLS.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  README.md  RELEASE.md  burn_dataset.html  burn_patch.html  cli.html  clippy_baseline.txt  cortenforge-tools.toml  data_ingestion.html  data_pipeline_overview.html  data_schema.html  datagen_scheduler.html  deny.toml  index.html  ml_pipeline.html  print.html  release.toml  runtime_overview.html  searcher-c2a407aa.js  searchindex-a0a4eba1.js  searchindex-e33db564.js  searchindex.js  searchindex.json  streaming_shards.html  tensor_warehouse.html  toc-433c19f3.js  training.html  training_overview.html  tui.html  tui.md
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  mdbook.yml
00_workspace/: build_and_run.html  canonical_flows.html  changelog.html  dev_loop.html  docsrs_alignment.html  feature_flags.html  glossary.html  index.html  integration_contracts.html  linking_style.html  maintenance_routine.html  open_questions.html  overview.html  quality_gates.html  readers_guide.html  reproducibility.html  shared_dep_themes.html  style_guide.html  workspace_metadata.html
10_crates/: deep_dives.html  index.html
10_crates/burn_dataset/: 01_overview.html  02_public_api.html  03_lifecycle.html  04_module_map.html  05_traits_and_generics.html  06_error_model.html  07_ownership_and_concurrency.html  08_performance_notes.html  09_examples.html  10_design_review.html  index.html
10_crates/capture_utils/: 01_overview.html  (+10 more)
20_building_apps/: 01_story_setup.html  02_app_stack.html  03_sim_core.html  04_vision_runtime.html  05_recorder.html  06_dataset.html  07_training.html  08_inference.html  09_tools_ops.html  10_epilogue.html  index.html
30_reference/: index.html
apps/colon_sim/: Cargo.toml  README.md
apps/colon_sim/src/: autopilot.rs  bootstrap.rs  controls.rs  hud.rs  lib.rs  polyp.rs  prelude.rs  probe.rs  recorder.rs  systems.rs  tunnel.rs
capture_utils/: Cargo.toml  README.md
capture_utils/src/: lib.rs
crates/burn_dataset/: Cargo.toml  README.md  release.toml
crates/burn_dataset/src/: aug.rs  batch.rs  capture.rs  lib.rs  types.rs  validation.rs  warehouse.rs
crates/burn_dataset/tests/: integration_workflows.rs
crates/capture_utils/: Cargo.toml  README.md  release.toml
crates/capture_utils/src/: lib.rs
crates/capture_utils/tests/: recorder_sink.rs
crates/cli_support/: Cargo.toml  README.md  release.toml
crates/cli_support/src/: common.rs  lib.rs  seed.rs
crates/colon_sim/: Cargo.toml
crates/colon_sim/src/: lib.rs  main.rs
crates/colon_sim/src/cli/: args.rs  common.rs  mod.rs
crates/colon_sim/src/sim/: recorder.rs
crates/colon_sim/src/vision/: README.md  interfaces.rs  mod.rs  overlay.rs  vision_core.rs.bak
crates/colon_sim/tests/: burn_dataset.rs  datagen_smoke.rs  hud_overlay.rs  overlay_schema.rs  seed_consistency.rs  seed_e2e_positions.rs  train_harness.rs  vision_overlay.rs  warehouse_store.rs
crates/cortenforge/: Cargo.toml  README.md
crates/cortenforge/src/: lib.rs
crates/data_contracts/: Cargo.toml  README.md  release.toml
crates/data_contracts/src/: capture.rs  lib.rs
crates/data_contracts/tests/: capture_validation.rs
crates/inference/: Cargo.toml  README.md  release.toml
crates/inference/src/: factory.rs  lib.rs
crates/inference/tests/: README.md  factory_fallback.rs
crates/models/: Cargo.toml  README.md  release.toml
crates/models/src/: lib.rs
crates/sim_core/: Cargo.toml  README.md  release.toml
crates/sim_core/src/: articulated_types.rs  autopilot_types.rs  camera.rs  controls.rs  lib.rs  probe_types.rs  recorder.rs  recorder_meta.rs  recorder_types.rs  runtime.rs
crates/training/: Cargo.toml  README.md  release.toml
crates/training/src/: dataset.rs  lib.rs  util.rs
crates/training/tests/: dataset_load.rs  forward_bigdet.rs  forward_shapes_bigdet.rs  smoke_bigdet.rs  smoke_train.rs
crates/vision_core/: Cargo.toml  README.md  release.toml
crates/vision_core/src/: capture.rs  lib.rs  overlay.rs
crates/vision_runtime/: Cargo.toml  README.md  release.toml
crates/vision_runtime/src/: lib.rs
crates/vision_runtime/tests/: smoke.rs
data_contracts/: Cargo.toml  README.md
data_contracts/src/: lib.rs  manifest.rs
data_contracts/tests/: capture_validation.rs
docs/: README.md  book.toml  book_audit.md  burn_dataset.md  clippy_baseline.md  coverage_baseline.md  refactor_progress.md  tools_refactor_plan.md  train_harness_plan.md  training.md  warehouse_commands_refactor.md  weak_points.md
inference/: Cargo.toml  README.md
inference/src/: factory.rs  lib.rs  plugin.rs
inference/tests/: integration_checkpoint.rs
models/: Cargo.toml  README.md
models/src/: lib.rs
sim_core/: Cargo.toml  README.md
sim_core/src/: camera.rs  controls.rs  hooks.rs  runtime.rs
sim_core/tests/: runtime.rs
src/: autopilot.rs  balloon_control.rs  burn_model.rs  camera.rs  cli.rs  controls.rs  hud.rs  lib.rs  main.rs  polyp.rs  probe.rs  seed.rs  service.rs  tunnel.rs  vision.rs  vision_interfaces.rs
tests/: burn_dataset.rs  hud_overlay.rs  overlay_schema.rs  seed_consistency.rs  seed_e2e_positions.rs  train_harness.rs  vision_inference.rs  warehouse_store.rs
tools/: Cargo.toml  README.md  book_tasks.sh  release.toml
tools/src/: config.rs  gpu_probe.rs  lib.rs  overlay.rs  recorder.rs  services.rs
tools/src/warehouse_commands/: builder.rs  mod.rs
tools/tests/: config_load.rs  warehouse_commands_builder.rs
tools/warehouse_commands/: ps.rs  ps_builder.rs  sh.rs  sh_builder.rs
tools/warehouse_commands/lib/: common.rs  ps_builder.rs  sh_builder.rs
tools/warehouse_commands/tests/: builder_outputs.rs
training/: Cargo.toml  README.md
training/src/: dataset.rs  util.rs
training/tests/: dataset_load.rs  smoke_train.rs
vision_core/: Cargo.toml  README.md
vision_core/src/: capture.rs  interfaces.rs  lib.rs
vision_core/tests/: overlay.rs
vision_runtime/: Cargo.toml  README.md
vision_runtime/src/: lib.rs
vision_runtime/tests/: overlay_state.rs  smoke.rs
(+578 files in other folders)
