[workspace]
members = [
    "crates/cli_support",
    "crates/burn_dataset",
    "crates/sim_core",
    "crates/vision_core",
    "crates/vision_runtime",
    "crates/data_contracts",
    "crates/capture_utils",
    "crates/models",
    "crates/training",
    "crates/inference",
    "tools",
    "crates/cortenforge",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bincode = { version = "2.0.0-rc.3", default-features = false }
burn = { version = "0.14", default-features = false }
burn-ndarray = { version = "0.14", default-features = false }
burn-wgpu = { version = "0.14", default-features = true }
clap = "4.5"
bevy = { version = "0.17.3", default-features = false }
bevy_camera = "0.17.3"
bevy_rapier3d = "0.32"
image = { version = "0.24", default-features = false }
rayon = "1.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"

[patch.crates-io]
cortenforge-models = { path = "crates/models" }
cortenforge-data-contracts = { path = "crates/data_contracts" }
cortenforge-burn-dataset = { path = "crates/burn_dataset" }
cortenforge-cli-support = { path = "crates/cli_support" }
cortenforge-vision-core = { path = "crates/vision_core" }
cortenforge-sim-core = { path = "crates/sim_core" }
cortenforge-capture-utils = { path = "crates/capture_utils" }
cortenforge-vision-runtime = { path = "crates/vision_runtime" }
cortenforge-inference = { path = "crates/inference" }
cortenforge-training = { path = "crates/training" }
cortenforge = { path = "crates/cortenforge" }
