[package]
name = "cortenforge"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Umbrella crate for the CortenForge stack; re-exports app-agnostic crates with feature wiring."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge"
readme = "README.md"
keywords = ["vision", "simulation", "training", "inference", "bevy"]
categories = ["science", "computer-vision", "game-engines"]
rust-version = "1.85"

[features]
default = ["sim-core", "vision-core"]
sim-core = ["sim_core"]
vision-core = ["vision_core"]
vision-runtime = ["vision_core", "vision_runtime"]
capture-utils = ["dep:capture_utils", "vision-core", "data-contracts"]
data-contracts = ["dep:data_contracts"]
models = ["dep:models"]
inference = ["vision-core", "sim-core", "models", "dep:inference"]
training = ["sim-core", "vision-core", "models", "dep:training"]
burn-runtime = ["inference", "training", "burn", "burn-ndarray", "bincode"]
burn-wgpu = ["burn-runtime", "dep:burn-wgpu"]
burn-dataset = ["burn_dataset"]
cli-support = ["cli_support"]
tools = ["dep:cortenforge_tools"]

[dependencies]
sim_core = { package = "cortenforge-sim-core", version = "0.2.1", optional = true }
vision_core = { package = "cortenforge-vision-core", version = "0.2.1", optional = true }
vision_runtime = { package = "cortenforge-vision-runtime", version = "0.2.1", optional = true }
capture_utils = { package = "cortenforge-capture-utils", version = "0.2.1", optional = true }
data_contracts = { package = "cortenforge-data-contracts", version = "0.2.1", optional = true }
models = { package = "cortenforge-models", version = "0.2.1", optional = true }
inference = { package = "cortenforge-inference", version = "0.2.1", optional = true }
training = { package = "cortenforge-training", version = "0.2.1", optional = true }
burn_dataset = { package = "cortenforge-burn-dataset", version = "0.2.1", optional = true }
cli_support = { package = "cortenforge-cli-support", version = "0.2.1", optional = true }
cortenforge_tools = { package = "cortenforge-tools", version = "0.2.1", optional = true }
burn = { workspace = true, optional = true, features = ["autodiff", "std"] }
burn-ndarray = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[workspace]
members = [
    "crates/cli_support",
    "crates/burn_dataset",
    "crates/sim_core",
    "crates/vision_core",
    "crates/vision_runtime",
    "crates/data_contracts",
    "crates/capture_utils",
    "crates/models",
    "crates/training",
    "crates/inference",
    "tools",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "std"] }
burn = { version = "0.19.1", default-features = false }
burn-ndarray = { version = "0.19.1", default-features = false }
burn-wgpu = { version = "0.19.1", default-features = true }
clap = "4.5.54"
bevy = { version = "0.17.3", default-features = false }
bevy_camera = "0.17.3"
bevy_rapier3d = "0.32.0"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
futures-lite = "2.6.1"
image = { version = "0.25.9", default-features = false }
memmap2 = "0.9.9"
nvml-wrapper = "0.11.0"
parquet = { version = "57.1.0", features = ["arrow"] }
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
arrow-select = "57.1.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.11"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
sysinfo = { version = "0.37.2", features = ["multithread"] }

[patch.crates-io]
cortenforge-models = { path = "crates/models" }
cortenforge-data-contracts = { path = "crates/data_contracts" }
cortenforge-burn-dataset = { path = "crates/burn_dataset" }
cortenforge-cli-support = { path = "crates/cli_support" }
cortenforge-vision-core = { path = "crates/vision_core" }
cortenforge-sim-core = { path = "crates/sim_core" }
cortenforge-capture-utils = { path = "crates/capture_utils" }
cortenforge-vision-runtime = { path = "crates/vision_runtime" }
cortenforge-inference = { path = "crates/inference" }
cortenforge-training = { path = "crates/training" }
