[package]
name = "inference"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["backend-ndarray", "tinydet"]
backend-ndarray = ["burn-ndarray"]
backend-wgpu = ["burn-wgpu"]
tinydet = ["models/tinydet"]
bigdet = ["models/bigdet"]

[lib]
name = "inference"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
vision_core = { path = "../vision_core" }
sim_core = { path = "../sim_core" }
bevy = "0.17.3"
burn = { version = "0.14", default-features = false, features = ["autodiff"] }
burn-ndarray = { version = "0.14", default-features = false, optional = true }
burn-wgpu = { version = "0.14", optional = true, default-features = true }
models = { path = "../models" }
