[package]
name = "inference"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Detector factory and inference helpers (Burn-backed or heuristic) for the CortenForge stack."
repository = "https://github.com/via-balaena/Deep_Poo"
homepage = "https://github.com/via-balaena/Deep_Poo"
documentation = "https://docs.rs/inference"
readme = "README.md"
keywords = ["inference", "burn", "detector", "bevy"]
categories = ["science", "computer-vision", "game-engines"]
rust-version = "1.75"

[features]
default = ["backend-ndarray", "tinydet"]
backend-ndarray = ["burn-ndarray", "burn/ndarray"]
backend-wgpu = ["burn-wgpu", "burn/wgpu"]
tinydet = ["models/tinydet"]
bigdet = ["models/bigdet"]

[lib]
name = "inference"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
vision_core = { version = "0.1.0" }
sim_core = { version = "0.1.0" }
bevy = "0.17.3"
burn = { version = "0.14", default-features = false, features = ["autodiff"] }
burn-ndarray = { version = "0.14", default-features = false, optional = true }
burn-wgpu = { version = "0.14", optional = true, default-features = true }
models = { package = "cortenforge-models", version = "0.1.0" }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
