[package]
name = "cortenforge-models"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Burn-based model definitions (TinyDet/BigDet) for the CortenForge stack."
repository = "https://github.com/via-balaena/Deep_Poo"
homepage = "https://github.com/via-balaena/Deep_Poo"
documentation = "https://docs.rs/models"
readme = "README.md"
keywords = ["burn", "models", "detector", "ml"]
categories = ["science", "computer-vision", "data-structures"]
rust-version = "1.75"

[lib]
name = "models"

[dependencies]
burn = { version = "0.14", default-features = false, features = ["autodiff", "std"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }

[features]
default = ["tinydet"]
tinydet = []
bigdet = []
