[package]
name = "cortenforge-sim-core"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Bevy-based simulation runtime primitives (modes, config, plugins) for the CortenForge stack. Renamed from sim_core; old crate deprecated—use this name."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-sim-core"
readme = "README.md"
keywords = ["bevy", "simulation", "runtime"]
categories = ["game-engines", "simulation", "graphics"]
rust-version = "1.75"

[lib]
name = "sim_core"

[dependencies]
bevy = { version = "0.17.3" }
bevy_rapier3d = { version = "0.32", features = ["simd-stable", "debug-render-3d"] }
vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
