[features]
default = []
tui = ["crossterm", "ratatui"]
scheduler = ["sysinfo"]
# Optional GPU feature flag to mirror root workspace flag.
gpu_nvidia = ["nvml-wrapper"]

[package]
name = "colon_sim_tools"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"

[lib]
name = "colon_sim_tools"
path = "src/lib.rs"

[dependencies]
cli_support = { package = "cortenforge-cli-support", version = "0.1.1" }
burn_dataset = { package = "cortenforge-burn-dataset", version = "0.1.1", default-features = false }
vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.1.1" }
inference = { package = "cortenforge-inference", version = "0.1.1" }
capture_utils = { package = "cortenforge-capture-utils", version = "0.1.1" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
image = { workspace = true, features = ["png", "rayon"] }
sysinfo = { version = "0.30", optional = true, features = ["multithread"] }
rayon = { workspace = true }
sha2 = { workspace = true }
arrow-array = { version = "46" }
arrow-schema = { version = "46" }
arrow-select = { version = "46" }
parquet = { version = "46", features = ["arrow"] }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", optional = true, default-features = false, features = ["crossterm"] }
thiserror = { workspace = true }
nvml-wrapper = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "datagen_scheduler"
path = "src/bin/datagen_scheduler.rs"
required-features = ["scheduler"]
