[features]
default = []
tui = ["crossterm", "ratatui"]
scheduler = ["sysinfo"]
# Optional GPU feature flag to mirror root workspace flag.
# TODO(v0.3+): if we add a `gpu-nvidia` alias, drop `gpu_nvidia` in the next breaking release.
gpu_nvidia = ["nvml-wrapper"]
gpu_amd_windows = []

[package]
name = "cortenforge-tools"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Tooling crate for CortenForge: shared CLI helpers and app-agnostic bins."
publish = true
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-tools"

[lib]
name = "cortenforge_tools"
path = "src/lib.rs"

[dependencies]
cli_support = { package = "cortenforge-cli-support", version = "0.2.1" }
burn_dataset = { package = "cortenforge-burn-dataset", version = "0.2.1", default-features = false }
vision_core = { package = "cortenforge-vision-core", version = "0.2.1" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.2.1" }
inference = { package = "cortenforge-inference", version = "0.2.1" }
capture_utils = { package = "cortenforge-capture-utils", version = "0.2.1" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
image = { workspace = true, features = ["png", "rayon"] }
sysinfo = { workspace = true, optional = true }
rayon = { workspace = true }
sha2 = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
parquet = { workspace = true }
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
thiserror = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gpu_probe"
path = "src/bin/gpu_probe.rs"

[[bin]]
name = "datagen_scheduler"
path = "src/bin/datagen_scheduler.rs"
required-features = ["scheduler"]
