[features]
default = []
tui = ["crossterm", "ratatui"]
scheduler = ["sysinfo"]
warehouse = ["burn_dataset/burn-runtime"]
# Optional GPU feature flag to mirror root workspace flag.
gpu-nvidia = ["nvml-wrapper"]
gpu-windows = []

[package]
name = "cortenforge-tools"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Tooling crate for CortenForge: shared CLI helpers and app-agnostic bins."
publish = true
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-tools"

[lib]
name = "cortenforge_tools"
path = "src/lib.rs"

[dependencies]
cli_support = { package = "cortenforge-cli-support", path = "../crates/cli_support", version = "0.6.0" }
burn_dataset = { package = "cortenforge-burn-dataset", path = "../crates/burn_dataset", version = "0.6.0", default-features = false }
vision_core = { package = "cortenforge-vision-core", path = "../crates/vision_core", version = "0.6.0" }
data_contracts = { package = "cortenforge-data-contracts", path = "../crates/data_contracts", version = "0.6.0" }
inference = { package = "cortenforge-inference", path = "../crates/inference", version = "0.6.0" }
capture_utils = { package = "cortenforge-capture-utils", path = "../crates/capture_utils", version = "0.6.0" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
image = { workspace = true, features = ["png", "rayon"] }
sysinfo = { workspace = true, optional = true }
rayon = { workspace = true }
sha2 = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
parquet = { workspace = true }
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
thiserror = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[[bin]]
name = "gpu_probe"
path = "src/bin/gpu_probe.rs"

[[bin]]
name = "datagen_scheduler"
path = "src/bin/datagen_scheduler.rs"
required-features = ["scheduler"]

[[bin]]
name = "warehouse_cmd"
path = "src/bin/warehouse_cmd.rs"
required-features = ["warehouse"]

[[bin]]
name = "warehouse_etl"
path = "src/bin/warehouse_etl.rs"
required-features = ["warehouse"]

[[bin]]
name = "warehouse_export"
path = "src/bin/warehouse_export.rs"
required-features = ["warehouse"]
