[features]
default = ["backend-ndarray", "tinydet"]
backend-ndarray = ["burn-ndarray"]
backend-wgpu = ["burn-wgpu"]
tinydet = ["models/tinydet"]
bigdet = ["models/bigdet"]

[package]
name = "training"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "training"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"
[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
data_contracts = { path = "../data_contracts" }
burn = { version = "0.14", default-features = false, features = ["autodiff", "std"] }
burn-ndarray = { version = "0.14", default-features = false, optional = true }
burn-wgpu = { version = "0.14", optional = true, default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }
models = { path = "../models" }

[dev-dependencies]
tempfile = "3.10"
