[package]
name = "cortenforge-vision-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Core vision interfaces and capture/overlay helpers for the CortenForge stack. Renamed from vision_core; old crate deprecated—use this name."
repository = "https://github.com/via-balaena/Deep_Poo"
homepage = "https://github.com/via-balaena/Deep_Poo"
documentation = "https://docs.rs/cortenforge-vision-core"
readme = "README.md"
keywords = ["vision", "graphics", "capture", "overlay", "serde"]
categories = ["graphics", "computer-vision", "game-engines"]
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
bevy = { version = "0.17.3", default-features = false, features = ["bevy_core_pipeline"] }
