[package]
name = "cortenforge-vision-runtime"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Bevy plugins for capture and inference runtime built on vision_core for the CortenForge stack. Renamed from vision_runtime; old crate deprecated—use this name."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-vision-runtime"
readme = "README.md"
keywords = ["bevy", "vision", "capture", "inference"]
categories = ["game-engines", "graphics", "computer-vision"]
rust-version = "1.75"

[lib]
name = "vision_runtime"

[dependencies]
bevy = { version = "0.17.3" }
bevy_camera = { version = "0.17.3" }
sim_core = { package = "cortenforge-sim-core", version = "0.1.1" }
vision_core = { package = "cortenforge-vision-core", version = "0.1.1" }
anyhow = { workspace = true }
image = { workspace = true, features = ["png"] }
futures-lite = { version = "2.3" }
