[package]
name = "colon_sim_app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bevy = "0.17.3"
bevy_mesh = "0.17.3"
bevy_rapier3d = { version = "0.32", features = ["simd-stable", "debug-render-3d"] }
sim_core = { path = "../../sim_core" }
vision_core = { path = "../../vision_core" }
vision_runtime = { path = "../../vision_runtime" }
data_contracts = { path = "../../data_contracts" }
models = { package = "cortenforge-models", path = "../../models", version = "0.1.0" }
anyhow = "1.0"
rand = "0.8"
smallvec = "1.13"
