[package]
name = "cortenforge-burn-dataset"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Dataset loading, splitting, and Burn-compatible batching utilities for CortenForge."
repository = "https://github.com/via-balaena/Deep_Poo"
homepage = "https://github.com/via-balaena/Deep_Poo"
documentation = "https://docs.rs/cortenforge-burn-dataset"
readme = "README.md"
keywords = ["dataset", "burn", "vision"]
categories = ["science", "computer-vision"]
rust-version = "1.75"

[features]
default = []
burn_runtime = ["burn", "burn-ndarray", "crossbeam-channel", "memmap2", "rayon"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
image = { version = "0.24", default-features = false, features = ["png", "rayon"] }
data_contracts = { package = "cortenforge-data-contracts", path = "../../data_contracts", version = "0.1.0" }
burn = { version = "0.14", default-features = false, optional = true, features = ["autodiff", "std"] }
burn-ndarray = { version = "0.14", default-features = false, optional = true }
crossbeam-channel = { version = "0.5", optional = true }
memmap2 = { version = "0.9", optional = true }
rayon = { version = "1.8", optional = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
