[package]
name = "cortenforge-burn-dataset"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "Dataset loading, splitting, and Burn-compatible batching utilities for CortenForge."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-burn-dataset"
readme = "README.md"
keywords = ["dataset", "burn", "vision"]
categories = ["science", "computer-vision"]
rust-version = "1.75"

[lib]
name = "burn_dataset"

[features]
default = []
burn_runtime = ["burn", "burn-ndarray", "crossbeam-channel", "memmap2", "rayon"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true, features = ["png", "rayon"] }
data_contracts = { package = "cortenforge-data-contracts", version = "0.1.5" }
burn = { workspace = true, optional = true, features = ["autodiff", "std"] }
burn-ndarray = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
