[package]
name = "cortenforge-capture-utils"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Capture helpers and recorder sinks (JSON, overlays, pruning) for the CortenForge stack. Renamed from capture_utils; old crate deprecated—use this name."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-capture-utils"
readme = "README.md"
keywords = ["capture", "recorder", "serde", "image"]
categories = ["data-structures", "graphics", "computer-vision"]
rust-version = "1.75"

[lib]
name = "capture_utils"

[dependencies]
vision_core = { package = "cortenforge-vision-core", version = "0.2.1" }
data_contracts = { package = "cortenforge-data-contracts", version = "0.2.1" }
image = { workspace = true, features = ["png", "rayon"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
