[package]
name = "cortenforge-cli-support"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared CLI argument helpers for CortenForge tools and apps (capture, warehouse, seeds, thresholds)."
repository = "https://github.com/via-balaena/CortenForge"
homepage = "https://github.com/via-balaena/CortenForge"
documentation = "https://docs.rs/cortenforge-cli-support"
readme = "README.md"
keywords = ["cli", "args", "capture", "warehouse"]
categories = ["command-line-interface"]
rust-version = "1.75"

[lib]
name = "cli_support"

[features]
default = []
bevy-resource = ["bevy"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
bevy = { workspace = true, optional = true, default-features = false }
